# omega-llm

./: .env  ai_chat.db  lang_fastapi.py  lang_fastapi_adv.py  lang_fastapi_db.py  langgraph_memory.py  pyproject.toml  rag_llm.py  simple_fastapi.py
00_openai_agents/: readme.md
00_openai_agents/00_uv/: readme.md
00_openai_agents/01_hello_agent/: hello_agent.ipynb  readme.md
00_openai_agents/04_streaming/: README.md  streaming.ipynb  streaming_gemini_error.ipynb
00_openai_agents/05_tools/: 05_tools.ipynb  README.md
00_openai_agents/appendix_litellm/: readme.md
03-fastapi/todos_app/: main.py
07-llm-and-prompt-engineering/: README.md
07-llm-and-prompt-engineering/llm_basics/: 01_gemeni_llm.py  02_gemeni_llm_stream.py
07-llm-and-prompt-engineering/llm_settings/: llm_max_tokens  llm_temperature.py  llm_top_p.py  prompt_elements.py
07-llm-and-prompt-engineering/prompting_techniques/: chain_of_thought.py  cot.md  few_shot.py  meta_prompting.py  (+1 more)
08-langchain/: langchain_tools.py
09-langgraph/: 02Langraph_FastApi.py  Command.py  langgraph_agent.py  langgraph_chain.py  langgraph_gemeni_agenticai_solar_rag.py  short_term_inmemory.py
HIL_agents/: .env  HIL.md  HIL_FastAPI.py  basic_example.py  gradio_interface.py  human_approval.py  human_approval_example.py  main.py  streamlit_hil.py
course-notebooks/: .env.example  .gitignore  README.md
db-agent/: db_agent.py
langchain/: langchain_agents.py  langchain_memory.py  langchain_messages.py
langgraph/: 01Langraph_Quiz_App.py  Command.py  langgraph_basic.py  langgraph_module0.py  langgraph_module1.py  long_term_memory.py  long_term_memory_monogdb_persist.py  short_term_memory_mongodb_persist.py
llm/: llm_gemeni.py
multi-agents/: multi-agents.md  rag.md  v1_basic_agent.py  v2_dual_agents.py  v3_orchestrated_agents.py  v4_enhanced_agents.py
rag/: Hotel_Alexandra.txt  data.txt  gemeni_rag.py  langchain_rag_agent.py  langraph_gemeni_agentic_rag.py  langraph_openai_agentic_rag_fastapi.py  openai_rag.py  openai_rag_faiss.py
websocket-agent/: client.html  client_nextjs_component.ts  ws-agent-server_openai.py  ws_agent_server_gemini.py
(+91 files in other folders)
